# jsonr

./: .gitattributes  AUTHORS  CITATION.bib  MANIFEST.in  Makefile  README.md  SECURITY.md  cspell.json  pyproject.toml  setup.cfg  setup.py
.config/: .mailmap  LICENSE  MANIFEST.in
jsonr/: README.md  __init__.py  __init__.pyi  __main__.py  help.py  py.typed
jsonr.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
jsonr/_core/: __init__.py  _binary.py  _code.py  _concurrent.py  _crypto.py  _data.py  _dcompress.py  _debug.py  _devtools.py  _dtypes.py  _file.py  _formats.py  _functional.py  _guitk.py  _idata.py  _import.py  _international.py  _iprotocols.py  _language.py  _markup.py  _math.py  _mswindows.py  _multimedia.py  _networking.py  _os.py  _packaging.py  _program.py  _runtime.py  _superseded.py  _text.py  _unix.py
jsonr/_typing/: __init__.py  jsonr_typing_flowa.py  jsonr_typing_json.py  jsonr_typing_pollinations.py  jsonr_typing_string.py
jsonr/_utils/: __init__.py  _bond.py  _convertions.py  _infinity.py  _inspect.py
jsonr/bases/: __init__.py  new_base.py
jsonr/core/: __init__.py  dataframe.py  new.py
jsonr/libs/: __init__.py
jsonr/libs/flowa/: CHANGELOG.md  README.md  __init__.py  _version.py  py.typed
jsonr/libs/flowa/main/: __init__.py  decisiontree.py  imagemodel.py  labelencoder.py
jsonr/libs/flowa/types/: __init__.py
jsonr/libs/flowa/utils/: __init__.py
jsonr/libs/pollinations/: py.typed
jsonr/libs/pollinations/types/: ImageModel.py  __init__.py
jsonr/typing/: __init__.py
jsonr/utils/: __init__.py
test/: test_import.py
