[build-system]
requires      = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jsonr"
version = "8.6.2"
description = "Highly customizable JSON objects and dataframes, and your python toolkit all in one."
readme = "README.md"
authors = [{ name = "jsonr", email = "jsonr.py@gmail.com" } ]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
]
keywords = [
    "jsonr",
    "json",
    "jsonr-py",
    "jsonr-python",
    "python"
]
requires-python = ">=3.7"
dependencies = [
    'numpy',
    'requests',
    'pathlib',
    'pandas',
    'google-generativeai'
]

[project.urls]
GitHub = "https://github.com/jsonr-py"
Repository = "https://github.com/jsonr-py/jsonr"
PyPi = "https://pypi.org/project/jsonr"
