[metadata]
name = jsonr
version = 8.5.6
description = Highly customizable JSON objects and dataframes, and your python toolkit all in one.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jsonr-py/jsonr
author = jsonr
author_email = jsonr.py@gmail.com
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
keywords = jsonr json jsonr-py jsonr-python python

[options]
packages = find:
install_requires =
    numpy
    requests
    pathlib
    pandas
    google-generativeai
